add navbar and main cont background

--- a/index.html
+++ b/index.html
@@ -10,13 +10,60 @@
   <script src="js\jquery.countTo.js"></script>
   <script src="js\jquery.stellar.js"></script>
   <script src="js\main.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css\font-awesome-4.7.0\css\font-awesome.min.css">
   <link rel="stylesheet" href="css\main.css">
   <title>Kancelaria2</title>
 </head>
 <body>
-  <div id="sec1"></div>
-  <div id="sec2"></div>
+  <div id="sec1-main-cont">
+    <nav>
+      <div id="nav-logo">
+        <i class="fa fa-envira" aria-hidden="true"></i>
+        <p>
+          sphera
+        </p>
+      </div>
+      <ul id="main-ul">
+        <li id="link1">
+          <a href="#">
+            <p>
+              o kancelarii
+            </p>
+          </a>
+        </li>
+        <li id="link2">
+          <a href="#">
+            <p>
+              czynności
+            </p>
+          </a>
+        </li>
+        <li id="link3">
+          <a href="#">
+            <p>
+              nasz zespół
+            </p>
+          </a>
+        </li>
+        <li id="link4">
+          <a href="#">
+            <p>
+              aktualności
+            </p>
+          </a>
+        </li>
+        <li id="link5">
+          <a href="#">
+            <p>
+              kontakt
+            </p>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div id="sec2-about"></div>
   <div id="sec3"></div>
 </body>
 </html>
