--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <script src="js\jquery.countTo.js"></script>
   <script src="js\jquery.stellar.js"></script>
   <script src="js\main.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Hind:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css\font-awesome-4.7.0\css\font-awesome.min.css">
   <link rel="stylesheet" href="css\main.css">
   <title>Kancelaria2</title>
 </head>
 <body>
-  <div id="sec1-main-cont">
+  <div id="sec1-main-cont" data-stellar-background-ratio="0.3">
     <nav>
       <div id="nav-logo">
         <i class="fa fa-envira" aria-hidden="true"></i>
@@ -62,6 +63,37 @@
         </li>
       </ul>
     </nav>
+    <div class="title-cont">
+      <div class="title-box">
+        <p class="main-title" data-stellar-ratio="2"
+                            data-stellar-horizontal-offset="92"
+                            data-stellar-vertical-offset="170">
+          Introducing Sphera Team
+        </p>
+        <div class="mini-box">
+          <p class="sub-title">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Ut, dignissimos aperiam maiores nemo quasi aut sapiente
+            quisquam quo reiciendis nobis illum saepe nihil non nisi
+            exercitationem obcaecati iusto expedita!
+          </p>
+          <div class="title-link">
+            <a href="">
+              <i class="fa fa-tag" aria-hidden="true"></i>
+              <p class="tickets">learn more</p>
+              <div class="hover-ticket hover1"></div>
+            </a>
+          </div>
+          <div class="title-link">
+            <a href="">
+              <i class="fa fa-tag" aria-hidden="true"></i>
+              <p class="tickets">contact us now</p>
+              <div class="hover-ticket hover2"></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div id="sec2-about"></div>
   <div id="sec3"></div>
