add content to about section

--- a/index.html
+++ b/index.html
@@ -26,35 +26,35 @@
         </p>
       </div>
       <ul id="main-ul">
-        <li id="link1">
+        <li class="link1">
           <a href="#">
             <p>
               o kancelarii
             </p>
           </a>
         </li>
-        <li id="link2">
+        <li class="link2">
           <a href="#">
             <p>
               czynności
             </p>
           </a>
         </li>
-        <li id="link3">
+        <li class="link3">
           <a href="#">
             <p>
               nasz zespół
             </p>
           </a>
         </li>
-        <li id="link4">
+        <li class="link4">
           <a href="#">
             <p>
               aktualności
             </p>
           </a>
         </li>
-        <li id="link5">
+        <li class="link5">
           <a href="#">
             <p>
               kontakt
@@ -65,9 +65,7 @@
     </nav>
     <div class="title-cont">
       <div class="title-box">
-        <p class="main-title" data-stellar-ratio="2"
-                            data-stellar-horizontal-offset="92"
-                            data-stellar-vertical-offset="170">
+        <p class="main-title">
           Introducing Sphera Team
         </p>
         <div class="mini-box">
@@ -95,7 +93,80 @@
       </div>
     </div>
   </div>
-  <div id="sec2-about"></div>
+  <div id="sec2-about">
+    <p id="header-title">
+      w czym możemy ci pomóc?
+    </p>
+    <p class="header-desc">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus veritatis placeat harum eaque, officia cupiditate velit ab eos tenetur iusto dolor facilis, nulla suscipit animi recusandae excepturi consectetur. Modi, quam.
+    </p>
+    <div class="category-box growing">
+      <div class="category-item">
+        <i class="fa fa-home cat-icon" aria-hidden="true"></i>
+        <p class="cat-title">
+          nieruchomości
+        </p>
+        <p class="cat-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus veritatis placeat harum.
+        </p>
+        <div class="cat-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
+      </div>
+      <div class="category-item">
+        <i class="fa fa-university cat-icon" aria-hidden="true"></i>
+        <p class="cat-title">
+          dziedziczenie
+        </p>
+        <p class="cat-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus veritatis placeat harum.
+        </p>
+        <div class="cat-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
+      </div>
+      <div class="category-item">
+        <i class="fa fa-handshake-o cat-icon" aria-hidden="true"></i>
+        <p class="cat-title">
+          firma
+        </p>
+        <p class="cat-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus veritatis placeat harum.
+        </p>
+        <div class="cat-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
+      </div>
+      <div class="category-item">
+        <i class="fa fa-diamond cat-icon" aria-hidden="true"></i>
+        <p class="cat-title">
+          majątek rodzinny
+        </p>
+        <p class="cat-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus veritatis placeat harum.
+        </p>
+        <div class="cat-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="sec3"></div>
 </body>
 </html>
