add section descripton and team

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div id="sec1-main-cont" data-stellar-background-ratio="0.3">
-    <nav>
+    <nav id="main-nav">
       <div id="nav-logo">
         <i class="fa fa-envira" aria-hidden="true"></i>
         <p>
@@ -167,6 +167,11 @@
       </div>
     </div>
   </div>
-  <div id="sec3"></div>
+  <div id="sec3-description" data-stellar-background-ratio="0.4">
+
+  </div>
+  <div id="sec4-team">
+    
+  </div>
 </body>
 </html>
