add content to about section, add team section with structure

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Hind:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css\font-awesome-4.7.0\css\font-awesome.min.css">
+  <link rel="stylesheet" href="css\animate.css">
   <link rel="stylesheet" href="css\main.css">
   <title>Kancelaria2</title>
 </head>
@@ -168,10 +169,138 @@
     </div>
   </div>
   <div id="sec3-description" data-stellar-background-ratio="0.4">
+    <div class="frames-box growing">
+      <div class="left-frame">
+        <div class="inner-left-frame">
+          <div id="slide-right-arrow">
+            <i class="fa fa-angle-right" aria-hidden="true"></i>
+          </div>
+          <div class="left-frame-content">
+            <div class="lfc-case">
+              <p class="lfc-title">
+                nasza historia
+              </p>
+              <p class="lfc-desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptas, pariatur, porro cumque error laboriosam odit maxime
+                quisquam autem nam dolores nobis illo, facilis placeat obcaecati
+                aliquam ut. Obcaecati neque, animi! Voluptates dolor hic officiis
+                enim, excepturi qui, debitis maiores ducimus error, accusamus
+                officia corporis quas fuga fugiat cum obcaecati, praesentium atque
+                ipsa distinctio blanditiis. Quibusdam recusandae porro atque
+                voluptatum minima!
+              </p>
+            </div>
+          </div>
 
+        </div>
+      </div>
+      <div class="right-frame">
+        <div class="inner-right-frame">
+          <div class="hidden-frame">
+            <p class="hf-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptas, pariatur, porro cumque error laboriosam odit maxime
+              quisquam autem nam dolores nobis illo, facilis placeat obcaecati
+              aliquam ut. Obcaecati neque, animi! Voluptates dolor hic officiis
+              enim, excepturi qui, debitis maiores ducimus error, accusamus
+              officia corporis quas fuga fugiat cum obcaecati, praesentium atque
+              ipsa distinctio blanditiis. Quibusdam recusandae porro atque
+              voluptatum minima!
+            </p>
+            <p class="hf-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptas, pariatur, porro cumque error laboriosam odit maxime
+              quisquam autem nam dolores nobis illo, facilis placeat obcaecati
+              aliquam ut. Obcaecati neque, animi! Voluptates dolor hic officiis
+              enim, excepturi qui, debitis maiores ducimus error, accusamus
+              officia corporis quas fuga fugiat cum obcaecati, praesentium atque
+              ipsa distinctio blanditiis. Quibusdam recusandae porro atque
+              voluptatum minima!
+            </p>
+          </div>
+          <div id="slide-left-arrow">
+            <i class="fa fa-angle-left" aria-hidden="true"></i>
+          </div>
+          <div class="right-frame-content">
+            <p class="rfc-title">
+              zaufanie to podstawa
+            </p>
+            <p class="rfc-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptas, pariatur, porro cumque error laboriosam.
+            </p>
+            <div class="rfc-item">
+              <div class="rfc-icon">
+                <i class="fa fa-trophy" aria-hidden="true"></i>
+              </div>
+              <div class="rfc-icon-desc">
+                <p class="rid-title">
+                  Lorem ipsum dolor sit amet.
+                </p>
+                <p class="rid-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Deserunt voluptates suscipit expedita, blanditiis labore
+                  recusandae tempora magnam, odit voluptatum quidem illo culpa
+                  libero laborum.
+                </p>
+              </div>
+            </div>
+            <div class="rfc-item">
+              <div class="rfc-icon">
+                <i class="fa fa-trophy" aria-hidden="true"></i>
+              </div>
+              <div class="rfc-icon-desc">
+                <p class="rid-title">
+                  Lorem ipsum dolor sit amet.
+                </p>
+                <p class="rid-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Repellat, ipsam obcaecati recusandae, deleniti sint eos laudantium
+                  sapiente corrupti, saepe voluptatibus.
+                </p>
+              </div>
+            </div>
+            <div class="rfc-item">
+              <div class="rfc-icon">
+                <i class="fa fa-trophy" aria-hidden="true"></i>
+              </div>
+              <div class="rfc-icon-desc">
+                <p class="rid-title">
+                  Lorem ipsum dolor sit amet.
+                </p>
+                <p class="rid-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Consequatur assumenda nam deserunt voluptate tenetur. Sed voluptates
+                  commodi quibusdam explicabo tenetur.
+                </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
   <div id="sec4-team">
-    
+    <p class="team-title">nasz zespół</p>
+    <p class="header-desc">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus veritatis placeat harum eaque, officia cupiditate velit ab eos tenetur iusto dolor facilis, nulla suscipit animi recusandae excepturi consectetur. Modi, quam.
+    </p>
+    <div class="person-box">
+      <div class="person-item">
+
+      </div>
+      <div class="person-item">
+        
+      </div>
+      <div class="person-item">
+
+      </div>
+      <div class="person-item">
+
+      </div>
+    </div>
   </div>
 </body>
 </html>
