--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </p>
             <div class="rfc-item">
               <div class="rfc-icon">
-                <i class="fa fa-trophy" aria-hidden="true"></i>
+                <i class="fa fa-balance-scale" aria-hidden="true"></i>
               </div>
               <div class="rfc-icon-desc">
                 <p class="rid-title">
@@ -248,7 +248,7 @@
             </div>
             <div class="rfc-item">
               <div class="rfc-icon">
-                <i class="fa fa-trophy" aria-hidden="true"></i>
+                <i class="fa fa-balance-scale" aria-hidden="true"></i>
               </div>
               <div class="rfc-icon-desc">
                 <p class="rid-title">
@@ -263,7 +263,7 @@
             </div>
             <div class="rfc-item">
               <div class="rfc-icon">
-                <i class="fa fa-trophy" aria-hidden="true"></i>
+                <i class="fa fa-balance-scale" aria-hidden="true"></i>
               </div>
               <div class="rfc-icon-desc">
                 <p class="rid-title">
@@ -289,18 +289,209 @@
     </p>
     <div class="person-box">
       <div class="person-item">
+        <div class="person-photo">
 
+        </div>
+        <p class="person-name">
+          <span>brian chandler</span> - Graphic Designer
+        </p>
+        <p class="person-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas eos quod, facilis quisquam labore incidunt repellendus qui adipisci harum. Eum nam placeat quo non debitis saepe commodi doloribus voluptatem voluptatum!
+        </p>
+        <div class="person-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
       </div>
       <div class="person-item">
-        
+        <div class="person-photo">
+
+        </div>
+        <p class="person-name">
+          <span>brian chandler</span> - Graphic Designer
+        </p>
+        <p class="person-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas eos quod, facilis quisquam labore incidunt repellendus qui adipisci harum. Eum nam placeat quo non debitis saepe commodi doloribus voluptatem voluptatum!
+        </p>
+        <div class="person-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
       </div>
       <div class="person-item">
+        <div class="person-photo">
 
+        </div>
+        <p class="person-name">
+          <span>christian baker</span> - Web Developer
+        </p>
+        <p class="person-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas eos quod, facilis quisquam labore incidunt repellendus qui adipisci harum. Eum nam placeat quo non debitis saepe commodi doloribus voluptatem voluptatum!
+        </p>
+        <div class="person-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
       </div>
       <div class="person-item">
+        <div class="person-photo">
 
+        </div>
+        <p class="person-name">
+          <span>dennis galagher</span> - Public Relations
+        </p>
+        <p class="person-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas eos quod, facilis quisquam labore incidunt repellendus qui adipisci harum. Eum nam placeat quo non debitis saepe commodi doloribus voluptatem voluptatum!
+        </p>
+        <div class="person-button link6">
+          <a href="">
+            <p>
+              więcej
+            </p>
+          </a>
+        </div>
       </div>
     </div>
+  </div>
+  <div id="sec5-numbers" data-stellar-background-ratio="0.4">
+    <div class="numbers-cover">
+      <p class="numbers-title">statystyki</p>
+      <div class="numbers-cont">
+        <div class="numbers-item">
+          <i class="fa fa-coffee" aria-hidden="true"></i>
+          <div class="numbers-item-desc">
+            <p class="item-counter">
+              <span class="timer" data-from="0" data-to="8251"
+      data-speed="2000" data-refresh-interval="10"></span>
+              kubków kawy
+            </p>
+            <p class="ic-description">
+              Lorem ipsum dolor
+            </p>
+            <div id="numberTag"></div>
+          </div>
+        </div>
+        <div class="numbers-item">
+          <i class="fa fa-users" aria-hidden="true"></i>
+          <div class="numbers-item-desc">
+            <p class="item-counter">
+              <span class="timer" data-from="0" data-to="4389"
+      data-speed="2000" data-refresh-interval="10"></span>
+              klientów
+            </p>
+            <p class="ic-description">
+              Lorem ipsum dolor
+            </p>
+          </div>
+        </div>
+        <div class="numbers-item">
+          <i class="fa fa-briefcase" aria-hidden="true"></i>
+          <div class="numbers-item-desc">
+            <p class="item-counter">
+              <span class="timer" data-from="0" data-to="7"
+      data-speed="2000" data-refresh-interval="10"></span>
+              lat w branży
+            </p>
+            <p class="ic-description">
+              Lorem ipsum dolor
+            </p>
+          </div>
+        </div>
+        <div class="numbers-item">
+          <i class="fa fa-sitemap" aria-hidden="true"></i>
+          <div class="numbers-item-desc">
+            <p class="item-counter">
+              <span class="timer" data-from="0" data-to="42"
+      data-speed="2000" data-refresh-interval="10"></span>
+              partnerów
+            </p>
+            <p class="ic-description">
+              Lorem ipsum dolor
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  <div id="sec6-socials">
+    <div class="socials-box">
+      <a class="socials-link" href="">
+        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+      </a>
+      <a class="socials-link" href="">
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+      </a>
+      <a class="socials-link" href="">
+        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+      </a>
+      <a class="socials-link" href="">
+        <i class="fa fa-youtube-square" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
+  <footer id="sec7-footer">
+    <p class="contact-title">kontakt</p>
+    <div class="footer-box">
+      <div class="footer-item">
+        <div class="title-box">
+          <p class="fi-title">
+            kancelaria notarialna
+          </p>
+          <p class="fi-title">
+            jan kowalski i katarzyna nowak
+          </p>
+        </div>
+        <div class="fi-content">
+          <p>
+            ul. Przykładowa 123
+          </p>
+          <p>
+            99-999 Warszawa
+          </p>
+        </div>
+        <div class="fi-content">
+          <p>NIP: 000-000-00-00</p>
+        </div>
+        <div class="fi-content">
+          <p>tel.: 22 777 77 77</p>
+          <p>fax: 22 888 88 88</p>
+        </div>
+        <div class="fi-content">
+          <p>email: <a href="#">przykladowy.email@kancelaria.pl</a></p>
+        </div>
+      </div>
+      <div class="footer-item">
+        <p class="fi-subtitle">
+          zapraszamy
+        </p>
+        <div class="fi-content">
+          <p>pon.-pt.: 08:00 - 18:00</p>
+          <p>sob.: 10:00 - 14:00</p>
+        </div>
+        <div class="fi-content">
+          <p class="additional-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quaerat est nam officiis quo neque voluptate, repellat quae, reprehenderit veritatis voluptas eum perferendis, totam, ratione dolorem! Doloremque!</p>
+        </div>
+      </div>
+      <div class="footer-item">
+        <iframe class="myMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19550.913384637504!2d21.00316583137201!3d52.227685477289654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x273932695a350cbc!2sNovotel+Warszawa+Centrum!5e0!3m2!1spl!2spl!4v1497189040488" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </footer>
+  <div id="sec8-last-footer">
+    <p class="copyright">
+      © Copyright 2017 Adam Reszka
+    </p>
   </div>
 </body>
 </html>
