add changes and photos

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     </p>
     <div class="person-box">
       <div class="person-item">
-        <div class="person-photo">
+        <div class="person-photo" id="photo1">
 
         </div>
         <p class="person-name">
@@ -307,11 +307,11 @@
         </div>
       </div>
       <div class="person-item">
-        <div class="person-photo">
+        <div class="person-photo" id="photo2">
 
         </div>
         <p class="person-name">
-          <span>brian chandler</span> - Graphic Designer
+          <span>jane porter</span> - Graphic Designer
         </p>
         <p class="person-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas eos quod, facilis quisquam labore incidunt repellendus qui adipisci harum. Eum nam placeat quo non debitis saepe commodi doloribus voluptatem voluptatum!
@@ -325,7 +325,7 @@
         </div>
       </div>
       <div class="person-item">
-        <div class="person-photo">
+        <div class="person-photo" id="photo3">
 
         </div>
         <p class="person-name">
@@ -343,11 +343,11 @@
         </div>
       </div>
       <div class="person-item">
-        <div class="person-photo">
+        <div class="person-photo" id="photo4">
 
         </div>
         <p class="person-name">
-          <span>dennis galagher</span> - Public Relations
+          <span>alice galagher</span> - Public Relations
         </p>
         <p class="person-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas eos quod, facilis quisquam labore incidunt repellendus qui adipisci harum. Eum nam placeat quo non debitis saepe commodi doloribus voluptatem voluptatum!
@@ -374,10 +374,9 @@
       data-speed="2000" data-refresh-interval="10"></span>
               kubków kawy
             </p>
-            <p class="ic-description">
+            <p id="numberTag" class="ic-description">
               Lorem ipsum dolor
             </p>
-            <div id="numberTag"></div>
           </div>
         </div>
         <div class="numbers-item">
